--- a/db5.html
+++ b/db5.html
@@ -198,6 +198,34 @@
 		  <h4>Episode 31</h4>
 		  <p></p>
 		</div>
+		<div>
+		Would you rather continue the story canonically? Or do you simply want the full course of everything dragon ball has to offer?
+		   <div class="thumbnail">
+			  <p><a href="dbkai.html"><img src="images/kai title.png" alt="Dragon Ball Z Kai" height="360" width="480"></a></p>
+			  <h4>Dragon Ball Z Kai is a remastered, and more faithful take on the story of Dragon Ball Z with the removal of 124 episodes of filler.</h4>
+		   </div>
+		   <div class="thumbnail">
+			  <p><a href="dbz.html"><img src="images/dbz title.png" alt="Dragon Ball Z" height="360" width="480"></a></p>
+			  <h4>Dragon Ball Z is a meaty 291 episode series with 2 TV specials and 15 films.</h4>
+			  <h4>If you have time to kill, and want one last look at the Dragon Ball, below is a trilogy of Dragon Ball films of an alternate path of Goku's journey.</h4>
+			  <p>(note: The dub of this trilogy of films is by a different voice cast and dubbing studio)</p>
+		   </div>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4>Curse of the Blood Rubies</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4>Sleeping Princess in Devil's Castle</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4>Mystical Adventure</h4>
+		  <p></p>
+		</div>
     </section>
 </div>
 </section>
