--- a/dbz.html
+++ b/dbz.html
@@ -48,6 +48,11 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 1: Dead Zone</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
 		  <p><iframe src="https://drive.google.com/file/d/1Zh7OP5tgJT0hgcHzkeNIoPGlkJ273A5q/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
 		  <p></p>
@@ -220,6 +225,16 @@
 		<div class="thumbnail">
 		  <p><iframe src="https://drive.google.com/file/d/1Pitf2RSTrFSLXeu3V9WJvJH2nboWOewn/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 35</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 2: The World's Strongest</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 3: Tree of Might</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
