--- a/dbz4.html
+++ b/dbz4.html
@@ -134,6 +134,11 @@
 		</div>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 5: Cooler's Revenge</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 18</h4>
 		  <p></p>
 		</div>
@@ -190,6 +195,11 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 29</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z TV Special #2: The History of Trunks</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
