--- a/dbz6.html
+++ b/dbz6.html
@@ -94,6 +94,21 @@
 		</div>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 6: Return of Cooler</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 7: Super Android 13!</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 8: Broly - The Legendary Super Saiyan</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
@@ -190,6 +205,11 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 29</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 9: Bojack Unbound</h4>
 		  <p></p>
 		</div>
     </section>
