--- a/dbz9.html
+++ b/dbz9.html
@@ -104,6 +104,11 @@
 		</div>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 12: Fusion Reborn</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
@@ -224,6 +229,11 @@
 		</div>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 13: Wrath of the Dragon</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 36</h4>
 		  <p></p>
 		</div>
@@ -235,6 +245,16 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 38</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 14: Battle of Gods</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 15: Ressurection 'F'</h4>
 		  <p></p>
 		</div>
     </section>
