--- a/dbgt2.html
+++ b/dbgt2.html
@@ -162,6 +162,11 @@
 		  <h4>Episode 24</h4>
 		  <p></p>
 		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball GT TV Special: A Hero's Legacy</h4>
+		  <p></p>
+		</div>
     </section>
 </div>
 </section>
