--- a/dbz2.html
+++ b/dbz2.html
@@ -174,6 +174,11 @@
 		</div>
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z TV Special #1: Bardock - The Father of Goku</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 26</h4>
 		  <p></p>
 		</div>
@@ -205,6 +210,11 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 32</h4>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Dragon Ball Z Movie 4: Lord Slug</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
