--- a/dbz9.html
+++ b/dbz9.html
@@ -257,6 +257,17 @@
 		  <h4 >Dragon Ball Z Movie 15: Ressurection 'F'</h4>
 		  <p></p>
 		</div>
+		<div>
+		   <h4 >Not satisfied? Check out Dragon Ball Super and/or Dragon Ball GT if you want the story of Goku's journey to continue.</h4>
+		</div>
+		<div class="thumbnail">
+		  <p><a href="dbs.html"><img src="images/dbsuper title.png" alt="Dragon Ball Super" height="360" width="480"></a></p>
+		  <p></p>
+		</div>
+		<div class="thumbnail">
+		  <p><a href="dbgt.html"><img src="images/dbgt title.png" alt="Dragon Ball Super" height="360" width="480"></a></p>
+		  <p></p>
+		</div>
     </section>
 </div>
 </section>
