--- a/dbz9.html
+++ b/dbz9.html
@@ -265,7 +265,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><a href="dbgt.html"><img src="images/dbgt title.png" alt="Dragon Ball Super" height="360" width="480"></a></p>
+		  <p><a href="dbgt.html"><img src="images/dbgt title.png" alt="Dragon Ball GT" height="360" width="480"></a></p>
 		  <p></p>
 		</div>
     </section>
