--- a/db5.html
+++ b/db5.html
@@ -203,17 +203,17 @@
 		   <h4>(note: The dub of this trilogy of films is by a different voice cast and dubbing studio)</h4>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/13IZuqtyHDAIFza2aNeg3NrrOEqGiwtjU/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Curse of the Blood Rubies</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1hhMmiSeJKGozjj1IOWsbaA7KahnjzFt5/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Sleeping Princess in Devil's Castle</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1kEV1GWyxyrz3th89DjrcNtEd9T8yXFKA/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Mystical Adventure</h4>
 		  <p></p>
 		</div>
