--- a/dbz.html
+++ b/dbz.html
@@ -48,7 +48,7 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/169DUIslYl7FmQ5GgucoDrib_3YgXbmmr/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 1: Dead Zone</h4>
 		  <p></p>
 		</div>
@@ -228,12 +228,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/12waYBUOXYjMRprwfN7WCQXXkmv9UvfxJ/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 2: The World's Strongest</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ShhZGeoUVhCogi6j1lSKK9nRbIGYaRoY/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 3: Tree of Might</h4>
 		  <p></p>
 		</div>
